[package]
name = "timegrapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
cpal = "0.15.3"
futures = "0.3.30"
plotly = "0.10.0"
rustfft = "6.2.0"
tokio = { version = "1.40.0", features = ["full"] }
warp = "0.3.7"
