[package]
name = "timegrapher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
anyhow = "1.0.89"
cpal = "0.15.3"
eframe = "0.29.0"
egui_plot = "0.29.0"
futures = "0.3.30"
libc = "0.2.159"
plotly = "0.10.0"
rustfft = "6.2.0"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cc = "1.1.24"

